--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,10 @@
 [workspace]
 resolver = "3"
-members = ["example"
+members = [
+  "oprf-testnet-authentication",
+  "oprf-testnet-client",
+  "oprf-testnet-dev-client",
+  "oprf-testnet-service",
 ]
 
 [workspace.package]
@@ -13,6 +17,41 @@ license = "MIT OR Apache-2.0"
 publish = false
 
 [workspace.dependencies]
+alloy = { version = "1.4", default-features = false }
+ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "^0.5.3" }
+ark-ec = "0.5"
+ark-ff = "0.5"
+async-trait = "0.1"
+aws-config = "1"
+axum = "0.8"
+axum-test = "18"
+clap = "4"
+eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "^0.5.3" }
+eyre = { version = "0.6" }
+humantime = "2"
+nodes-common = { package = "taceo-nodes-common", version = "0.2" }
+nodes-observability = { package = "taceo-nodes-observability", version = "0.1" }
+oprf-client = { package = "taceo-oprf-client", version = "0.3" }
+oprf-core = { package = "taceo-oprf-core", version = "0.3" }
+oprf-service = { package = "taceo-oprf-service", version = "0.3.0" }
+oprf-types = { package = "taceo-oprf-types", version = "0.4.0" }
+poseidon2 = { package = "taceo-poseidon2", version = "0.2", default-features = false }
+rand = { version = "0.8" }
+rand_chacha = { version = "0.3" }
+reqwest = { version = "0.12", default-features = false, features = [
+  "json",
+  "rustls-tls",
+] }
+rustls = "0.23"
+secrecy = "0.10"
+serde = { version = "1" }
+taceo-oprf = { package = "taceo-oprf", git = "https://github.com/TaceoLabs/oprf-service", rev = "11b7844", version = "0.1" }
+thiserror = { version = "2" }
+tokio = { version = "1" }
+tracing = { version = "0.1" }
+tracing-subscriber = { version = "0.3" }
+uuid = { version = "1" }
+webpki-roots = { version = "1.0" }
 
 # This profile can be used for CI in pull requests.
 [profile.ci-dev]
