--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ reqwest = { version = "0.12", default-features = false, features = [
 rustls = "0.23"
 secrecy = "0.10"
 serde = { version = "1" }
+sha2 = "0.10.9"
 taceo-oprf = { package = "taceo-oprf", git = "https://github.com/TaceoLabs/oprf-service", rev = "2ba29f5b9119e4632dfd1cb195955ace77ebf632", version = "0.1" }
 thiserror = { version = "2" }
 tokio = { version = "1" }
