--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,15 +34,14 @@ nodes-observability = { package = "taceo-nodes-observability", version = "0.1" }
 poseidon2 = { package = "taceo-poseidon2", version = "0.2", default-features = false }
 rand = { version = "0.8" }
 rand_chacha = { version = "0.3" }
-reqwest = { version = "0.12", default-features = false, features = [
-  "json",
-  "rustls-tls",
-] }
+reqwest = { version = "0.12", default-features = false }
 rustls = "0.23"
 secrecy = "0.10"
 serde = { version = "1" }
+serde_json = { version = "1" }
 sha2 = "0.10.9"
 taceo-oprf = { package = "taceo-oprf", git = "https://github.com/TaceoLabs/oprf-service", rev = "2ba29f5b9119e4632dfd1cb195955ace77ebf632", version = "0.1" }
+tempfile = "3"
 thiserror = { version = "2" }
 tokio = { version = "1" }
 tracing = { version = "0.1" }
