--- a/oprf-testnet-authentication/Cargo.toml
+++ b/oprf-testnet-authentication/Cargo.toml
@@ -10,15 +10,18 @@ license.workspace = true
 publish.workspace = true
 
 [dependencies]
-async-trait = { workspace = true }
+async-trait.workspace = true
 axum = { workspace = true, features = ["ws"] }
 eyre.workspace = true
 reqwest = { workspace = true, features = [
   "json",
   "rustls-tls",
 ] }
+secrecy = { workspace = true, features = ["serde"] }
 serde = { workspace = true, features = ["derive"] }
-taceo-oprf = { workspace = true, features = ["full"] }
+serde_json.workspace = true
+taceo-oprf = { workspace = true, features = ["service"] }
+tempfile.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 uuid.workspace = true
