--- a/oprf-testnet-service/deploy/docker-compose.yml
+++ b/oprf-testnet-service/deploy/docker-compose.yml
@@ -17,3 +17,45 @@ services:
     command: anvil
     environment:
         ANVIL_IP_ADDR: 0.0.0.0
+  oprf-key-gen0:
+    # this tag/sha must match the versions of taceo crates in Cargo.toml
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-2ba29f5b9119e4632dfd1cb195955ace77ebf632
+    network_mode: "host"
+    environment:
+      OPRF_NODE_ENVIRONMENT: dev
+      OPRF_NODE_BIND_ADDR: 0.0.0.0:20000
+      OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT: ${OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT}
+      OPRF_NODE_CHAIN_WS_RPC_URL: ws://127.0.0.1:8545
+      OPRF_NODE_RP_SECRET_ID_PREFIX: oprf/rp/n0
+      OPRF_NODE_WALLET_PRIVATE_KEY_SECRET_ID: oprf/eth/n0
+      OPRF_NODE_KEY_GEN_ZKEY: /app/OPRFKeyGen.13.arks.zkey
+      OPRF_NODE_KEY_GEN_GRAPH: /app/OPRFKeyGenGraph.13.bin
+      OPRF_NODE_TRANSACTION_CONFIRMATIONS: 1
+  oprf-key-gen1:
+    # this tag/sha must match the versions of taceo crates in Cargo.toml
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-2ba29f5b9119e4632dfd1cb195955ace77ebf632
+    network_mode: "host"
+    environment:
+      OPRF_NODE_ENVIRONMENT: dev
+      OPRF_NODE_BIND_ADDR: 0.0.0.0:20001
+      OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT: ${OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT}
+      OPRF_NODE_CHAIN_WS_RPC_URL: ws://127.0.0.1:8545
+      OPRF_NODE_RP_SECRET_ID_PREFIX: oprf/rp/n1
+      OPRF_NODE_WALLET_PRIVATE_KEY_SECRET_ID: oprf/eth/n1
+      OPRF_NODE_KEY_GEN_ZKEY: /app/OPRFKeyGen.13.arks.zkey
+      OPRF_NODE_KEY_GEN_GRAPH: /app/OPRFKeyGenGraph.13.bin
+      OPRF_NODE_TRANSACTION_CONFIRMATIONS: 1
+  oprf-key-gen2:
+    # this tag/sha must match the versions of taceo crates in Cargo.toml
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-2ba29f5b9119e4632dfd1cb195955ace77ebf632
+    network_mode: "host"
+    environment:
+      OPRF_NODE_ENVIRONMENT: dev
+      OPRF_NODE_BIND_ADDR: 0.0.0.0:20002
+      OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT: ${OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT}
+      OPRF_NODE_CHAIN_WS_RPC_URL: ws://127.0.0.1:8545
+      OPRF_NODE_RP_SECRET_ID_PREFIX: oprf/rp/n2
+      OPRF_NODE_WALLET_PRIVATE_KEY_SECRET_ID: oprf/eth/n2
+      OPRF_NODE_KEY_GEN_ZKEY: /app/OPRFKeyGen.13.arks.zkey
+      OPRF_NODE_KEY_GEN_GRAPH: /app/OPRFKeyGenGraph.13.bin
+      OPRF_NODE_TRANSACTION_CONFIRMATIONS: 1
