--- a/oprf-testnet-service/deploy/docker-compose.yml
+++ b/oprf-testnet-service/deploy/docker-compose.yml
@@ -17,9 +17,17 @@ services:
     command: anvil
     environment:
         ANVIL_IP_ADDR: 0.0.0.0
+  postgres:
+    image: postgres:latest
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=indexer_tests
   oprf-key-gen0:
     # this tag/sha must match the versions of taceo crates in Cargo.toml
-    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-2ba29f5b9119e4632dfd1cb195955ace77ebf632
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-1b0920299c3af921e96a58a61ae54f7113dc0cba
     network_mode: "host"
     environment:
       OPRF_NODE_ENVIRONMENT: dev
@@ -31,9 +39,11 @@ services:
       OPRF_NODE_KEY_GEN_ZKEY: /app/OPRFKeyGen.13.arks.zkey
       OPRF_NODE_KEY_GEN_GRAPH: /app/OPRFKeyGenGraph.13.bin
       OPRF_NODE_TRANSACTION_CONFIRMATIONS: 1
+      OPRF_NODE_DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5440/postgres
+      OPRF_NODE_DB_SCHEMA: oprf
   oprf-key-gen1:
     # this tag/sha must match the versions of taceo crates in Cargo.toml
-    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-2ba29f5b9119e4632dfd1cb195955ace77ebf632
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-1b0920299c3af921e96a58a61ae54f7113dc0cba
     network_mode: "host"
     environment:
       OPRF_NODE_ENVIRONMENT: dev
@@ -45,9 +55,11 @@ services:
       OPRF_NODE_KEY_GEN_ZKEY: /app/OPRFKeyGen.13.arks.zkey
       OPRF_NODE_KEY_GEN_GRAPH: /app/OPRFKeyGenGraph.13.bin
       OPRF_NODE_TRANSACTION_CONFIRMATIONS: 1
+      OPRF_NODE_DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5441/postgres
+      OPRF_NODE_DB_SCHEMA: oprf
   oprf-key-gen2:
     # this tag/sha must match the versions of taceo crates in Cargo.toml
-    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-2ba29f5b9119e4632dfd1cb195955ace77ebf632
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-1b0920299c3af921e96a58a61ae54f7113dc0cba
     network_mode: "host"
     environment:
       OPRF_NODE_ENVIRONMENT: dev
@@ -59,3 +71,30 @@ services:
       OPRF_NODE_KEY_GEN_ZKEY: /app/OPRFKeyGen.13.arks.zkey
       OPRF_NODE_KEY_GEN_GRAPH: /app/OPRFKeyGenGraph.13.bin
       OPRF_NODE_TRANSACTION_CONFIRMATIONS: 1
+      OPRF_NODE_DB_CONNECTION_STRING: postgres://postgres:postgres@localhost:5442/postgres
+      OPRF_NODE_DB_SCHEMA: oprf
+  oprf-node-db0:
+    image: postgres:latest
+    ports:
+      - "5440:5432"
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+  oprf-node-db1:
+    image: postgres:latest
+    ports:
+      - "5441:5432"
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+  oprf-node-db2:
+    image: postgres:latest
+    ports:
+      - "5442:5432"
+    environment:
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_DB=postgres
+
