integrated comments and added seperate client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ members = [
   "oprf-testnet-authentication",
   "oprf-testnet-client",
   "oprf-testnet-dev-client",
-  "oprf-testnet-service",
+  "oprf-testnet-node",
+  "oprf-testnet-public-client",
 ]
 
 [workspace.package]
@@ -19,14 +20,12 @@ publish = false
 [workspace.dependencies]
 alloy = { version = "1.4", default-features = false }
 ark-babyjubjub = { package = "taceo-ark-babyjubjub", version = "^0.5.3" }
-ark-ec = "0.5"
 ark-ff = "0.5"
 async-trait = "0.1"
-aws-config = "1"
 axum = "0.8"
 axum-test = "18"
 clap = "4"
-eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "=0.5.4" }
+eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "^0.5.4" }
 eyre = { version = "0.6" }
 humantime = "2"
 nodes-common = { package = "taceo-nodes-common", version = "0.2" }
@@ -39,13 +38,11 @@ rustls = "0.23"
 secrecy = "0.10"
 serde = { version = "1" }
 serde_json = { version = "1" }
-sha2 = "0.10.9"
 taceo-oprf = { package = "taceo-oprf", version = "0.2", default-features = false }
 tempfile = "3"
 thiserror = { version = "2" }
 tokio = { version = "1" }
 tracing = { version = "0.1" }
-tracing-subscriber = { version = "0.3" }
 uuid = { version = "1" }
 webpki-roots = { version = "1.0" }
 
