--- a/oprf-testnet-public-client/Cargo.toml
+++ b/oprf-testnet-public-client/Cargo.toml
@@ -15,6 +15,7 @@ ark-babyjubjub.workspace = true
 ark-ff.workspace = true
 clap = { workspace = true, features = ["derive", "env"] }
 eyre.workspace = true
+oprf-testnet-authentication = { package = "taceo-oprf-testnet-authentication", path = "../oprf-testnet-authentication", version = "0.1" }
 oprf-testnet-client = { package = "taceo-oprf-testnet-client", path = "../oprf-testnet-client", version = "0.1" }
 rand.workspace = true
 rand_chacha.workspace = true
