--- a/oprf-testnet-client/Cargo.toml
+++ b/oprf-testnet-client/Cargo.toml
@@ -9,6 +9,10 @@ repository.workspace = true
 license.workspace = true
 publish.workspace = true
 
+[[bin]]
+name = "taceo-oprf-testnet-client"
+path = "bin/main.rs"
+
 [dependencies]
 alloy = { workspace = true, features = [
   "full",
