--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,8 @@ permissions:
 
 on:
   push:
-    # tags:
-    #   - v[0-9]+.*
+    tags:
+      - v[0-9]+.*
 
 
 jobs:
@@ -22,7 +22,7 @@ jobs:
       - uses: taiki-e/create-gh-release-action@v1
         with:
           # (optional) Path to changelog.
-          changelog: CHANGELOG.md
+          # changelog: CHANGELOG.md
           # (required) GitHub token for creating GitHub Releases.
           token: ${{ secrets.GITHUB_TOKEN }}
 
