--- a/oprf-testnet-node/deploy/docker-compose.yml
+++ b/oprf-testnet-node/deploy/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - OPRF_NODE_ENVIRONMENT=prod
       - OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT=${OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT}
       - OPRF_NODE_ACCEPTED_VERSIONS=>=0.0.0
+      - OPRF_NODE_MAX_MESSAGE_SIZE=51200
   oprf-node1:
     container_name: oprf-node1
     image: node
@@ -25,6 +26,7 @@ services:
       - OPRF_NODE_ENVIRONMENT=prod
       - OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT=${OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT}
       - OPRF_NODE_ACCEPTED_VERSIONS=>=0.0.0
+      - OPRF_NODE_MAX_MESSAGE_SIZE=51200
   oprf-node2:
     container_name: oprf-node2
     image: node
@@ -38,6 +40,7 @@ services:
       - OPRF_NODE_ENVIRONMENT=prod
       - OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT=${OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT}
       - OPRF_NODE_ACCEPTED_VERSIONS=>=0.0.0
+      - OPRF_NODE_MAX_MESSAGE_SIZE=51200
   localstack:
     image: localstack/localstack
     container_name: localstack
