--- a/oprf-testnet-node/deploy/docker-compose.yml
+++ b/oprf-testnet-node/deploy/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       - POSTGRES_DB=indexer_tests
   oprf-key-gen0:
     # this tag/sha must match the versions of taceo crates in Cargo.toml
-    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-1b0920299c3af921e96a58a61ae54f7113dc0cba
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:v1.0.0-rc.2
     network_mode: "host"
     environment:
       OPRF_NODE_ENVIRONMENT: dev
@@ -84,7 +84,7 @@ services:
       OPRF_NODE_DB_SCHEMA: oprf
   oprf-key-gen1:
     # this tag/sha must match the versions of taceo crates in Cargo.toml
-    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-1b0920299c3af921e96a58a61ae54f7113dc0cba
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:v1.0.0-rc.2
     network_mode: "host"
     environment:
       OPRF_NODE_ENVIRONMENT: dev
@@ -99,7 +99,7 @@ services:
       OPRF_NODE_DB_SCHEMA: oprf
   oprf-key-gen2:
     # this tag/sha must match the versions of taceo crates in Cargo.toml
-    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-1b0920299c3af921e96a58a61ae54f7113dc0cba
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:v1.0.0-rc.2
     network_mode: "host"
     environment:
       OPRF_NODE_ENVIRONMENT: dev
