--- a/oprf-testnet-client/Cargo.toml
+++ b/oprf-testnet-client/Cargo.toml
@@ -9,6 +9,10 @@ repository.workspace = true
 license.workspace = true
 publish.workspace = true
 
+[[bin]]
+name = "taceo-oprf-testnet-client"
+path = "bin/main.rs"
+
 [dependencies]
 alloy = { workspace = true, features = [
   "full",
@@ -19,8 +23,20 @@ alloy = { workspace = true, features = [
 ] }
 ark-babyjubjub = { workspace = true }
 ark-ff = { workspace = true }
+clap = { workspace = true, features = ["derive", "env"] }
 eyre.workspace = true
 oprf-testnet-authentication = { package = "taceo-oprf-testnet-authentication", path = "../oprf-testnet-authentication", version = "0.1" }
 rand.workspace = true
+rand_chacha.workspace = true
+rustls.workspace = true
 taceo-oprf = { workspace = true, features = ["client"] }
+tokio = { workspace = true, features = [
+  "net",
+  "rt-multi-thread",
+  "signal",
+  "sync",
+  "time",
+  "tokio-macros",
+] }
 tracing.workspace = true
+webpki-roots.workspace = true
