--- a/oprf-testnet-node/deploy/docker-compose.yml
+++ b/oprf-testnet-node/deploy/docker-compose.yml
@@ -1,4 +1,46 @@
 services:
+  oprf-node0:
+    container_name: oprf-node0
+    image: node
+    network_mode: "host"
+    environment:
+      - RUST_LOG=taceo_oprf_testnet_node=trace,taceo_oprf_service=trace,info,taceo_oprf_testnet_authentication=trace
+      - OPRF_NODE_UNKEY_VERIFY_KEY=${OPRF_NODE_UNKEY_VERIFY_KEY}
+      - OPRF_NODE_BIND_ADDR=0.0.0.0:10000
+      - OPRF_NODE_DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5440/postgres
+      - OPRF_NODE_DB_SCHEMA=oprf
+      - OPRF_NODE_ENVIRONMENT=prod
+      - OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT=${OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT}
+      - OPRF_NODE_ACCEPTED_VERSIONS=>=0.0.0
+      - OPRF_NODE_MAX_MESSAGE_SIZE=51200
+  oprf-node1:
+    container_name: oprf-node1
+    image: node
+    network_mode: "host"
+    environment:
+      - RUST_LOG=taceo_oprf_testnet_node=trace,taceo_oprf_service=trace,info,taceo_oprf_testnet_authentication=trace
+      - OPRF_NODE_UNKEY_VERIFY_KEY=${OPRF_NODE_UNKEY_VERIFY_KEY}
+      - OPRF_NODE_BIND_ADDR=0.0.0.0:10001
+      - OPRF_NODE_DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5441/postgres
+      - OPRF_NODE_DB_SCHEMA=oprf
+      - OPRF_NODE_ENVIRONMENT=prod
+      - OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT=${OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT}
+      - OPRF_NODE_ACCEPTED_VERSIONS=>=0.0.0
+      - OPRF_NODE_MAX_MESSAGE_SIZE=51200
+  oprf-node2:
+    container_name: oprf-node2
+    image: node
+    network_mode: "host"
+    environment:
+      - RUST_LOG=taceo_oprf_testnet_node=trace,taceo_oprf_service=trace,info,taceo_oprf_testnet_authentication=trace
+      - OPRF_NODE_UNKEY_VERIFY_KEY=${OPRF_NODE_UNKEY_VERIFY_KEY}
+      - OPRF_NODE_BIND_ADDR=0.0.0.0:10002
+      - OPRF_NODE_DB_CONNECTION_STRING=postgres://postgres:postgres@localhost:5442/postgres
+      - OPRF_NODE_DB_SCHEMA=oprf
+      - OPRF_NODE_ENVIRONMENT=prod
+      - OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT=${OPRF_NODE_OPRF_KEY_REGISTRY_CONTRACT}
+      - OPRF_NODE_ACCEPTED_VERSIONS=>=0.0.0
+      - OPRF_NODE_MAX_MESSAGE_SIZE=51200
   localstack:
     image: localstack/localstack
     container_name: localstack
@@ -27,7 +69,7 @@ services:
       - POSTGRES_DB=indexer_tests
   oprf-key-gen0:
     # this tag/sha must match the versions of taceo crates in Cargo.toml
-    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-1b0920299c3af921e96a58a61ae54f7113dc0cba
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:v1.0.0-rc.2
     network_mode: "host"
     environment:
       OPRF_NODE_ENVIRONMENT: dev
@@ -42,7 +84,7 @@ services:
       OPRF_NODE_DB_SCHEMA: oprf
   oprf-key-gen1:
     # this tag/sha must match the versions of taceo crates in Cargo.toml
-    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-1b0920299c3af921e96a58a61ae54f7113dc0cba
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:v1.0.0-rc.2
     network_mode: "host"
     environment:
       OPRF_NODE_ENVIRONMENT: dev
@@ -57,7 +99,7 @@ services:
       OPRF_NODE_DB_SCHEMA: oprf
   oprf-key-gen2:
     # this tag/sha must match the versions of taceo crates in Cargo.toml
-    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:sha-1b0920299c3af921e96a58a61ae54f7113dc0cba
+    image: ghcr.io/taceolabs/oprf-service/oprf-key-gen:v1.0.0-rc.2
     network_mode: "host"
     environment:
       OPRF_NODE_ENVIRONMENT: dev
