--- a/oprf-testnet-authentication/Cargo.toml
+++ b/oprf-testnet-authentication/Cargo.toml
@@ -10,6 +10,13 @@ license.workspace = true
 publish.workspace = true
 
 [dependencies]
+alloy = { workspace = true, features = [
+  "full",
+  "node-bindings",
+  "rpc",
+  "rpc-client-ws",
+  "serde",
+] }
 async-trait.workspace = true
 axum = { workspace = true, features = ["ws"] }
 eyre.workspace = true
@@ -20,7 +27,7 @@ reqwest = { workspace = true, features = [
 secrecy = { workspace = true, features = ["serde"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
-taceo-oprf = { workspace = true, features = ["service"] }
+taceo-oprf = { workspace = true, features = ["client", "service"] }
 tempfile.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
