fix: serveral small code issues

--- a/oprf-testnet-authentication/Cargo.toml
+++ b/oprf-testnet-authentication/Cargo.toml
@@ -10,13 +10,7 @@ license.workspace = true
 publish.workspace = true
 
 [dependencies]
-alloy = { workspace = true, features = [
-  "full",
-  "node-bindings",
-  "rpc",
-  "rpc-client-ws",
-  "serde",
-] }
+alloy.workspace = true
 async-trait.workspace = true
 axum = { workspace = true, features = ["ws"] }
 eyre.workspace = true
