--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,12 +23,16 @@ ark-ff = "0.5"
 async-trait = "0.1"
 axum = "0.8"
 axum-test = "18"
+bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", rev = "v1.0.0-beta.18" }
 clap = "4"
 eddsa-babyjubjub = { package = "taceo-eddsa-babyjubjub", version = "^0.5.4" }
 eyre = { version = "0.6" }
 humantime = "2"
+nargo = { git = "https://github.com/noir-lang/noir.git", rev = "v1.0.0-beta.18" }
 nodes-common = { package = "taceo-nodes-common", version = "0.2" }
 nodes-observability = { package = "taceo-nodes-observability", version = "0.1" }
+noir_artifact_cli = { git = "https://github.com/noir-lang/noir.git", rev = "v1.0.0-beta.18" }
+noirc_artifacts = { git = "https://github.com/noir-lang/noir.git", rev = "v1.0.0-beta.18" }
 poseidon2 = { package = "taceo-poseidon2", version = "0.2", default-features = false }
 rand = { version = "0.8" }
 rand_chacha = { version = "0.3" }
