--- a/deny.toml
+++ b/deny.toml
@@ -73,6 +73,7 @@ ignore = [
   { id = "RUSTSEC-2024-0436", reason = "Paste crate is unmaintained, but arkworks is still using it." },
   { id = "RUSTSEC-2024-0388", reason = "derivative crate is unmaintained, but arkworks is still using it." },
   { id = "RUSTSEC-2025-0134", reason = "rustls-pemfile crate is unmaintained, but its used by testcontainers and aws crates" },
+  { id = "RUSTSEC-2025-0141", reason = "bincode crate is unmaintained, but its used by noir" },
 ]
 # If this is true, then cargo deny will use the git executable to fetch advisory database.
 # If this is false, then it uses a built-in git library.
