--- a/oprf-testnet-authentication/Cargo.toml
+++ b/oprf-testnet-authentication/Cargo.toml
@@ -13,7 +13,11 @@ publish.workspace = true
 alloy.workspace = true
 async-trait.workspace = true
 axum = { workspace = true, features = ["ws"] }
+bn254_blackbox_solver.workspace = true
 eyre.workspace = true
+nargo.workspace = true
+noir_artifact_cli.workspace = true
+noirc_artifacts.workspace = true
 reqwest = { workspace = true, features = [
   "json",
   "rustls-tls",
@@ -26,3 +30,11 @@ tempfile.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+
+# pinned versions to make noir compile
+elliptic-curve = { version = "=0.14.0-rc.17", default-features = false, features = [
+  "sec1"
+] }
+k256 = "=0.14.0-rc.1"
+p256 = "=0.14.0-rc.1"
+rand_core = "=0.10.0-rc-2"
