--- a/oprf-testnet-client/Cargo.toml
+++ b/oprf-testnet-client/Cargo.toml
@@ -31,6 +31,7 @@ rand.workspace = true
 rand_chacha.workspace = true
 rustls.workspace = true
 taceo-oprf = { workspace = true, features = ["client"] }
+tempfile.workspace = true
 tokio = { workspace = true, features = [
   "net",
   "rt-multi-thread",
