--- a/oprf-testnet-node/Cargo.toml
+++ b/oprf-testnet-node/Cargo.toml
@@ -9,9 +9,9 @@ repository.workspace = true
 license.workspace = true
 publish.workspace = true
 
-[[bin]]
-name = "taceo-oprf-testnet-node"
-path = "src/bin/oprf-testnet-node.rs"
+# [[bin]]
+# name = "taceo-oprf-testnet-node"
+# path = "src/bin/oprf-testnet-node.rs"
 
 [dependencies]
 axum = { workspace = true }
