build(deps): update taceo-oprf to v0.6.0

--- a/oprf-testnet-client/Cargo.toml
+++ b/oprf-testnet-client/Cargo.toml
@@ -27,7 +27,7 @@ rand.workspace = true
 rand_chacha.workspace = true
 rustls.workspace = true
 secrecy.workspace = true
-taceo-oprf = { workspace = true, features = ["client"] }
+taceo-oprf = { workspace = true, features = ["client", "core", "types"] }
 tempfile.workspace = true
 tokio = { workspace = true, features = [
   "net",
