--- a/oprf-testnet-authentication/Cargo.toml
+++ b/oprf-testnet-authentication/Cargo.toml
@@ -25,7 +25,7 @@ reqwest = { workspace = true, features = [
 secrecy = { workspace = true, features = ["serde"] }
 serde = { workspace = true, features = ["derive"] }
 serde_json.workspace = true
-taceo-oprf = { workspace = true, features = ["client", "service"] }
+taceo-oprf = { workspace = true, features = ["types", "client", "service"] }
 tempfile.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
